// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type System: Fields args must be properly named Type System: Enum types must be well defined rejects an Enum type with incorrectly named values 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 21,
        "line": 2,
      },
    ],
    "message": "Name \\"__badName\\" must not begin with \\"__\\", which is reserved by GraphQL introspection.",
  },
]
`;

exports[`Type System: Fields args must be properly named rejects field arg with invalid names 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 38,
        "line": 2,
      },
    ],
    "message": "Name \\"__badName\\" must not begin with \\"__\\", which is reserved by GraphQL introspection.",
  },
]
`;

exports[`Type System: Objects must have fields rejects an Object type with incorrectly named fields 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 29,
        "line": 2,
      },
    ],
    "message": "Name \\"__badName\\" must not begin with \\"__\\", which is reserved by GraphQL introspection.",
  },
]
`;
